<resources>
    <string name="app_name">UniMate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="maps_api_key">AIzaSyDilIYL3eg-eN9J-rnEQYYRCoxk3HM-JAg</string>


    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_activitylist">Activity List</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_addactivity">Add New Activity</string>
    <string name="menu_addlostitem">Add Lost Item</string>
    <string name="menu_addfounditem">Add Found Item</string>
    <string name="menu_Calender">Calender</string>
    <string name="menu_Lost">Lost and Found Items</string>
    <string name="menu_UniMap">Uni Map</string>
    <string name="profile">My profile</string>
    <string name="settings">Settings</string>
</resources>