<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_calender"
        android:name="com.s23010664.unimate.ui.calender.CalenderFragment"
        android:label="@string/menu_Calender"
        tools:layout="@layout/fragment_calender" />
    <fragment
        android:id="@+id/nav_addactivity"
        android:name="com.s23010664.unimate.ui.addactivity.AddActivityFragment"
        android:label="@string/menu_addactivity"
        tools:layout="@layout/fragment_add_activity" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.s23010664.unimate.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_activity_list"
        android:name="com.s23010664.unimate.ui.activitylist.ActivityListFragment"
        android:label="@string/menu_activitylist"
        tools:layout="@layout/fragment_activity_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.s23010664.unimate.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.s23010664.unimate.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_user_profile"
        android:name="com.s23010664.unimate.ui.userprofile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>