<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/baseline_apps_24"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_activity_list"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/menu_activitylist" />

        <item
            android:id="@+id/nav_unimap"
            android:icon="@drawable/baseline_add_location_alt_24"
            android:title="@string/menu_UniMap" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/menu_Calender" />

        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/round_person_24"
            android:title="Me" />
    </group>


</menu>
